# otus_cxx_developer

./: .gitignore  version.h
.github/workflows/: hw1.yml  hw2.yml  hw3.yml  release.yml
hw1/: CMakeLists.txt
hw2/: CMakeLists.txt  ipv4_addr.h  main.cpp
hw3/: CMakeLists.txt  allocator.h  custom_list.h  main.cpp
